--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --watch --development --open",
-    "dev": "webpack --mode development --watch",
+    "start": "webpack --config webpack.dev.js --mode development --watch",
+    "build": "webpack --config webpack.prod.js",
     "format": "prettier --write \"**/*.{html,css,scss,js}\""
   },
   "keywords": [],
@@ -23,7 +23,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
