--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "css-loader": "^3.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.18.2",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
